plugins/groovy/testdata/highlighting/WrongAnnotation.groovy
class Anno {}

@<error descr="'Anno' is not an annotation">Anno</error>
def foo() {

}
